# cppChatOnline_Client

./: CMakeLists.txt  CMakeUserPresets.json  MainWidget.cpp  MainWidget.h  README.md  SessionFriendArea.cpp  SessionTailMoreArea.h  UserInfoArea.cpp  UserInfoArea.h  main.cpp  resource.qrc
Dialog/: FriendInfoArea.h  SessionTailMoreArea.cpp  SessionTailMoreArea.h  UserInfoArea.h
WindowMid/: FriendApplyItem.cpp  FriendApplyItem.h  FriendItem.cpp  FriendItem.h  SessionFriendArea.cpp  SessionFriendArea.h  SessionFriendItem.cpp  SessionFriendItem.h  SessionItem.cpp  SessionItem.h
WindowRight/: MessageShowArea.h
cppWeChat_Client/: CMakeLists.txt  FriendInfoArea.cpp  FriendInfoArea.h  MainWidget.cpp  MainWidget.h  MainWidget.ui  MessageEditArea.cpp  MessageEditArea.h  MessageShowArea.cpp  MessageShowArea.h  SessionFriendArea.h  data.h  resource.qrc
